feat: integrate YouTube WebView with enhanced features and updates