@@ -14,6 +14,7 @@ import androidx.coordinatorlayout.widget.CoordinatorLayout;
 import org.schabi.newpipe.R;
 
 import java.lang.reflect.Field;
+import java.util.Arrays;
 import java.util.List;
 
 // See https://stackoverflow.com/questions/56849221#57997489
@@ -26,7 +27,7 @@ public final class FlingBehavior extends AppBarLayout.Behavior {
 
     private boolean allowScroll = true;
     private final Rect globalRect = new Rect();
-    private final List<Integer> skipInterceptionOfElements = List.of(
+    private final List<Integer> skipInterceptionOfElements = Arrays.asList(
             R.id.itemsListPanel, R.id.playbackSeekBar,
             R.id.playPauseButton, R.id.playPreviousButton, R.id.playNextButton);
 
@@ -66,7 +67,7 @@ public final class FlingBehavior extends AppBarLayout.Behavior {
     public boolean onInterceptTouchEvent(@NonNull final CoordinatorLayout parent,
                                          @NonNull final AppBarLayout child,
                                          @NonNull final MotionEvent ev) {
-        for (final int element : skipInterceptionOfElements) {
+        for (final Integer element : skipInterceptionOfElements) {
             final View view = child.findViewById(element);
             if (view != null) {
                 final boolean visible = view.getGlobalVisibleRect(globalRect);
@@ -131,8 +132,8 @@ public final class FlingBehavior extends AppBarLayout.Behavior {
         try {
             final Class<?> headerBehaviorType = this.getClass().getSuperclass().getSuperclass();
             if (headerBehaviorType != null) {
-                final Field field =
-                        headerBehaviorType.getDeclaredField("lastNestedScrollingChildRef");
+                final Field field
+                        = headerBehaviorType.getDeclaredField("lastNestedScrollingChildRef");
                 field.setAccessible(true);
                 return field;
             }
