@@ -1,10 +1,7 @@
 package org.schabi.newpipe.util;
 
-import static org.schabi.newpipe.extractor.ServiceList.YouTube;
-
 import android.content.Context;
 import android.content.SharedPreferences;
-import android.content.res.Resources;
 import android.net.ConnectivityManager;
 
 import androidx.annotation.NonNull;
@@ -16,67 +13,35 @@ import androidx.preference.PreferenceManager;
 import org.schabi.newpipe.R;
 import org.schabi.newpipe.extractor.MediaFormat;
 import org.schabi.newpipe.extractor.stream.AudioStream;
-import org.schabi.newpipe.extractor.stream.AudioTrackType;
 import org.schabi.newpipe.extractor.stream.DeliveryMethod;
 import org.schabi.newpipe.extractor.stream.Stream;
 import org.schabi.newpipe.extractor.stream.VideoStream;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Objects;
-import java.util.Set;
-import java.util.function.Predicate;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public final class ListHelper {
     // Video format in order of quality. 0=lowest quality, n=highest quality
     private static final List<MediaFormat> VIDEO_FORMAT_QUALITY_RANKING =
-            List.of(MediaFormat.v3GPP, MediaFormat.WEBM, MediaFormat.MPEG_4);
+            Arrays.asList(MediaFormat.v3GPP, MediaFormat.WEBM, MediaFormat.MPEG_4);
 
     // Audio format in order of quality. 0=lowest quality, n=highest quality
     private static final List<MediaFormat> AUDIO_FORMAT_QUALITY_RANKING =
-            List.of(MediaFormat.MP3, MediaFormat.WEBMA, MediaFormat.M4A);
-    // Audio format in order of efficiency. 0=least efficient, n=most efficient
+            Arrays.asList(MediaFormat.MP3, MediaFormat.WEBMA, MediaFormat.M4A);
+    // Audio format in order of efficiency. 0=most efficient, n=least efficient
     private static final List<MediaFormat> AUDIO_FORMAT_EFFICIENCY_RANKING =
-            List.of(MediaFormat.MP3, MediaFormat.M4A, MediaFormat.WEBMA);
-    // Use a Set for better performance
-    private static final Set<String> HIGH_RESOLUTION_LIST = Set.of("1440p", "2160p");
-    // Audio track types in order of priority. 0=lowest, n=highest
-    private static final List<AudioTrackType> AUDIO_TRACK_TYPE_RANKING =
-            List.of(AudioTrackType.DESCRIPTIVE, AudioTrackType.SECONDARY, AudioTrackType.DUBBED,
-                    AudioTrackType.ORIGINAL);
-    // Audio track types in order of priority when descriptive audio is preferred.
-    private static final List<AudioTrackType> AUDIO_TRACK_TYPE_RANKING_DESCRIPTIVE =
-            List.of(AudioTrackType.SECONDARY, AudioTrackType.DUBBED, AudioTrackType.ORIGINAL,
-                    AudioTrackType.DESCRIPTIVE);
-
-    /**
-     * List of supported YouTube Itag ids.
-     * The original order is kept.
-     * @see org.schabi.newpipe.extractor.services.youtube.ItagItem
-     */
-    private static final List<Integer> SUPPORTED_ITAG_IDS =
-            List.of(
-                    17, 36, // video v3GPP
-                    18, 34, 35, 59, 78, 22, 37, 38, // video MPEG4
-                    43, 44, 45, 46, // video webm
-                    171, 172, 139, 140, 141, 249, 250, 251, // audio
-                    160, 133, 134, 135, 212, 136, 298, 137, 299, 266, // video only
-                    278, 242, 243, 244, 245, 246, 247, 248, 271, 272, 302, 303, 308, 313, 315
-            );
+            Arrays.asList(MediaFormat.WEBMA, MediaFormat.M4A, MediaFormat.MP3);
+    // Use a HashSet for better performance
+    private static final Set<String> HIGH_RESOLUTION_LIST = new HashSet<>(
+            Arrays.asList("1440p", "2160p"));
 
     private ListHelper() { }
 
     /**
+     * @see #getDefaultResolutionIndex(String, String, MediaFormat, List)
      * @param context      Android app context
      * @param videoStreams list of the video streams to check
      * @return index of the video stream with the default index
-     * @see #getDefaultResolutionIndex(String, String, MediaFormat, List)
      */
     public static int getDefaultResolutionIndex(final Context context,
                                                 final List<VideoStream> videoStreams) {
@@ -86,23 +51,10 @@ public final class ListHelper {
     }
 
     /**
+     * @see #getDefaultResolutionIndex(String, String, MediaFormat, List)
      * @param context           Android app context
      * @param videoStreams      list of the video streams to check
-     * @param defaultResolution the default resolution to look for
      * @return index of the video stream with the default index
-     * @see #getDefaultResolutionIndex(String, String, MediaFormat, List)
-     */
-    public static int getResolutionIndex(final Context context,
-                                         final List<VideoStream> videoStreams,
-                                         final String defaultResolution) {
-        return getDefaultResolutionWithDefaultFormat(context, defaultResolution, videoStreams);
-    }
-
-    /**
-     * @param context      Android app context
-     * @param videoStreams list of the video streams to check
-     * @return index of the video stream with the default index
-     * @see #getDefaultResolutionIndex(String, String, MediaFormat, List)
      */
     public static int getPopupDefaultResolutionIndex(final Context context,
                                                      final List<VideoStream> videoStreams) {
@@ -112,35 +64,220 @@ public final class ListHelper {
     }
 
     /**
-     * @param context           Android app context
-     * @param videoStreams      list of the video streams to check
-     * @param defaultResolution the default resolution to look for
-     * @return index of the video stream with the default index
-     * @see #getDefaultResolutionIndex(String, String, MediaFormat, List)
+     * Finds the stream matching a quality selected on a previous video.
+     *
+     * <p>Stream list positions are not stable between videos. Match the selected resolution and
+     * codec family instead, preferring an exact frame-rate variant when available, then the same
+     * effective resolution, and finally the closest lower resolution.</p>
+     *
+     * @param targetResolution resolution selected by the user
+     * @param targetCodec codec selected by the user, or {@code null} if it is unknown
+     * @param videoStreams streams available for the new video
+     * @return a valid stream index, or {@code -1} if the stream list is empty
      */
-    public static int getPopupResolutionIndex(final Context context,
-                                              final List<VideoStream> videoStreams,
-                                              final String defaultResolution) {
-        return getDefaultResolutionWithDefaultFormat(context, defaultResolution, videoStreams);
+    public static int getResolutionAndCodecIndex(
+            @NonNull final String targetResolution,
+            @Nullable final String targetCodec,
+            @Nullable final List<VideoStream> videoStreams) {
+        if (videoStreams == null || videoStreams.isEmpty()) {
+            return -1;
+        }
+
+        final String normalizedTarget = normalizeResolutionKey(targetResolution);
+        final String codecFamily = codecFamilyOf(targetCodec);
+        int index;
+
+        if (codecFamily != null) {
+            index = findBestVideoStreamIndex(videoStreams, targetResolution, null, codecFamily);
+            if (index >= 0) {
+                return index;
+            }
+            index = findBestVideoStreamIndex(videoStreams, null, normalizedTarget, codecFamily);
+            if (index >= 0) {
+                return index;
+            }
+        }
+
+        index = findBestVideoStreamIndex(videoStreams, targetResolution, null, null);
+        if (index >= 0) {
+            return index;
+        }
+        index = findBestVideoStreamIndex(videoStreams, null, normalizedTarget, null);
+        if (index >= 0) {
+            return index;
+        }
+
+        String fallbackResolution = null;
+        for (final VideoStream stream : videoStreams) {
+            final String resolution = normalizeResolutionKey(
+                    Objects.toString(stream.getResolution(), ""));
+            if (compareVideoStreamResolution(resolution, normalizedTarget) < 0
+                    && (fallbackResolution == null || compareVideoStreamResolution(
+                    resolution, fallbackResolution) > 0)) {
+                fallbackResolution = resolution;
+            }
+        }
+        if (fallbackResolution == null) {
+            for (final VideoStream stream : videoStreams) {
+                final String resolution = normalizeResolutionKey(
+                        Objects.toString(stream.getResolution(), ""));
+                if (fallbackResolution == null || compareVideoStreamResolution(
+                        resolution, fallbackResolution) < 0) {
+                    fallbackResolution = resolution;
+                }
+            }
+        }
+
+        if (codecFamily != null) {
+            index = findBestVideoStreamIndex(
+                    videoStreams, null, fallbackResolution, codecFamily);
+            if (index >= 0) {
+                return index;
+            }
+        }
+        index = findBestVideoStreamIndex(videoStreams, null, fallbackResolution, null);
+        return index >= 0 ? index : 0;
     }
 
     public static int getDefaultAudioFormat(final Context context,
                                             final List<AudioStream> audioStreams) {
-        return getAudioIndexByHighestRank(audioStreams,
-                getAudioTrackComparator(context).thenComparing(getAudioFormatComparator(context)));
-    }
-
-    public static int getDefaultAudioTrackGroup(final Context context,
-                                                final List<List<AudioStream>> groupedAudioStreams) {
-        if (groupedAudioStreams == null || groupedAudioStreams.isEmpty()) {
+        if (audioStreams == null || audioStreams.isEmpty()) {
             return -1;
         }
 
-        final Comparator<AudioStream> cmp = getAudioTrackComparator(context);
-        final List<AudioStream> highestRanked = groupedAudioStreams.stream()
-                .max((o1, o2) -> cmp.compare(o1.get(0), o2.get(0)))
+        final SharedPreferences prefs = PreferenceManager.getDefaultSharedPreferences(context);
+        final String preferredAudioLanguage = prefs.getString(
+                context.getString(R.string.preferred_audio_language_key), "original");
+
+        List<AudioStream> filteredStreams = filterAudioStreamsByLanguage(
+                audioStreams, preferredAudioLanguage);
+
+        if (filteredStreams.isEmpty()) {
+            filteredStreams = audioStreams;
+        }
+
+        final AudioStream selectedStream;
+        if (isLimitingDataUsage(context)) {
+            selectedStream = getMostCompactAudioStream(null, filteredStreams);
+        } else {
+            selectedStream = getHighestQualityAudioStream(null, filteredStreams);
+        }
+
+        if (selectedStream == null) {
+            return -1;
+        }
+
+        for (int i = 0; i < audioStreams.size(); i++) {
+            if (audioStreams.get(i) == selectedStream) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    @Nullable
+    private static AudioStream getHighestQualityAudioStream(@Nullable final MediaFormat format,
+                                                            @Nullable final List<AudioStream> audioStreams) {
+        if (audioStreams == null || audioStreams.isEmpty()) {
+            return null;
+        }
+        return audioStreams.stream()
+                .filter(audioStream -> format == null || audioStream.getFormat() == format)
+                .max((s1, s2) -> compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_QUALITY_RANKING))
                 .orElse(null);
-        return groupedAudioStreams.indexOf(highestRanked);
+    }
+
+    @Nullable
+    private static AudioStream getMostCompactAudioStream(@Nullable final MediaFormat format,
+                                                         @Nullable final List<AudioStream> audioStreams) {
+        if (audioStreams == null || audioStreams.isEmpty()) {
+            return null;
+        }
+        return audioStreams.stream()
+                .filter(audioStream -> format == null || audioStream.getFormat() == format)
+                .min((s1, s2) -> compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_EFFICIENCY_RANKING))
+                .orElse(null);
+    }
+
+    public static List<AudioStream> filterAudioStreamsByLanguage(
+            final List<AudioStream> audioStreams, final String preferredLanguage) {
+        if (audioStreams == null || audioStreams.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        if ("original".equals(preferredLanguage)) {
+            final List<AudioStream> originalStreams = audioStreams.stream()
+                    .filter(stream -> {
+                        final String trackName = stream.getAudioTrackName();
+                        if (trackName == null) return true;
+                        final String nameLower = trackName.toLowerCase();
+                        return nameLower.contains("original") || nameLower.contains("default");
+                    })
+                    .collect(Collectors.toList());
+            if (!originalStreams.isEmpty()) {
+                return originalStreams;
+            }
+            final List<AudioStream> noTrackInfoStreams = audioStreams.stream()
+                    .filter(stream -> stream.getAudioTrackId() == null)
+                    .collect(Collectors.toList());
+            if (!noTrackInfoStreams.isEmpty()) {
+                return noTrackInfoStreams;
+            }
+            return audioStreams;
+        }
+
+        final List<AudioStream> matchedStreams = audioStreams.stream()
+                .filter(stream -> {
+                    final String locale = stream.getAudioLocale();
+                    if (locale != null && locale.equals(preferredLanguage)) {
+                        return true;
+                    }
+                    final String trackId = stream.getAudioTrackId();
+                    if (trackId != null) {
+                        final String langCode = trackId.split("\\.")[0].split("-")[0];
+                        return langCode.equals(preferredLanguage);
+                    }
+                    return false;
+                })
+                .collect(Collectors.toList());
+
+        return matchedStreams.isEmpty() ? audioStreams : matchedStreams;
+    }
+
+    public static List<AudioStream> getFilteredAudioStreams(
+            @NonNull final Context context,
+            @Nullable final List<AudioStream> audioStreams) {
+        if (audioStreams == null) {
+            return Collections.emptyList();
+        }
+
+        final Map<String, AudioStream> collectedStreams = new LinkedHashMap<>();
+
+        final Comparator<AudioStream> cmp = (s1, s2) ->
+                compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_QUALITY_RANKING);
+
+        for (final AudioStream stream : audioStreams) {
+            if (stream.getDeliveryMethod() == DeliveryMethod.TORRENT
+                    || (stream.getDeliveryMethod() == DeliveryMethod.HLS
+                    && stream.getFormat() == MediaFormat.OPUS)) {
+                continue;
+            }
+
+            final String trackId = Objects.toString(stream.getAudioTrackId(), "");
+
+            final AudioStream presentStream = collectedStreams.get(trackId);
+            if (presentStream == null || cmp.compare(stream, presentStream) > 0) {
+                collectedStreams.put(trackId, stream);
+            }
+        }
+
+        if (collectedStreams.size() > 1) {
+            collectedStreams.remove("");
+        }
+
+        return collectedStreams.values().stream()
+                .sorted(getAudioTrackNameComparator())
+                .collect(Collectors.toList());
     }
 
     public static int getAudioFormatIndex(final Context context,
@@ -158,21 +295,41 @@ public final class ListHelper {
         return getDefaultAudioFormat(context, audioStreams);
     }
 
+    private static Comparator<AudioStream> getAudioTrackNameComparator() {
+        return (s1, s2) -> {
+            final String name1 = s1.getAudioTrackName() != null
+                    ? s1.getAudioTrackName() : "";
+            final String name2 = s2.getAudioTrackName() != null
+                    ? s2.getAudioTrackName() : "";
+            return name1.compareToIgnoreCase(name2);
+        };
+    }
+
     /**
      * Return a {@link Stream} list which uses the given delivery method from a {@link Stream}
      * list.
      *
-     * @param streamList     the original {@link Stream stream} list
-     * @param deliveryMethod the {@link DeliveryMethod delivery method}
+     * @param streamList     the original stream list
+     * @param deliveryMethod the delivery method
      * @param <S>            the item type's class that extends {@link Stream}
-     * @return a {@link Stream stream} list which uses the given delivery method
+     * @return a stream list which uses the given delivery method
      */
     @NonNull
-    public static <S extends Stream> List<S> getStreamsOfSpecifiedDelivery(
-            @Nullable final List<S> streamList,
+    public static <S extends Stream> List<S> keepStreamsWithDelivery(
+            @NonNull final List<S> streamList,
             final DeliveryMethod deliveryMethod) {
-        return getFilteredStreamList(streamList,
-                stream -> stream.getDeliveryMethod() == deliveryMethod);
+        if (streamList.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        final Iterator<S> streamListIterator = streamList.iterator();
+        while (streamListIterator.hasNext()) {
+            if (streamListIterator.next().getDeliveryMethod() != deliveryMethod) {
+                streamListIterator.remove();
+            }
+        }
+
+        return streamList;
     }
 
     /**
@@ -183,37 +340,67 @@ public final class ListHelper {
      * @return a stream list which only contains URL streams and non-torrent streams
      */
     @NonNull
-    public static <S extends Stream> List<S> getUrlAndNonTorrentStreams(
-            @Nullable final List<S> streamList) {
-        return getFilteredStreamList(streamList,
-                stream -> stream.isUrl() && stream.getDeliveryMethod() != DeliveryMethod.TORRENT);
+    public static <S extends Stream> List<S> removeNonUrlAndTorrentStreams(
+            @NonNull final List<S> streamList) {
+        if (streamList.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        final Iterator<S> streamListIterator = streamList.iterator();
+        while (streamListIterator.hasNext()) {
+            final S stream = streamListIterator.next();
+            if (stream.getDeliveryMethod() == DeliveryMethod.TORRENT) {
+                streamListIterator.remove();
+            }
+        }
+
+        return streamList;
     }
 
     /**
-     * Return a {@link Stream} list which only contains streams which can be played by the player.
+     * Return a {@link Stream} list which only contains non-torrent streams.
      *
-     * <p>
-     * Some formats are not supported, see {@link #SUPPORTED_ITAG_IDS} for more details.
-     * Torrent streams are also removed, because they cannot be retrieved, like OPUS streams using
-     * HLS as their delivery method, since they are not supported by ExoPlayer.
-     * </p>
-     *
-     * @param <S>        the item type's class that extends {@link Stream}
      * @param streamList the original stream list
-     * @param serviceId  the service ID from which the streams' list comes from
-     * @return a stream list which only contains streams that can be played the player
+     * @param <S>        the item type's class that extends {@link Stream}
+     * @return a stream list which only contains non-torrent streams
      */
     @NonNull
-    public static <S extends Stream> List<S> getPlayableStreams(
-            @Nullable final List<S> streamList, final int serviceId) {
-        final int youtubeServiceId = YouTube.getServiceId();
-        return getFilteredStreamList(streamList,
-                stream -> stream.getDeliveryMethod() != DeliveryMethod.TORRENT
-                        && (stream.getDeliveryMethod() != DeliveryMethod.HLS
-                        || stream.getFormat() != MediaFormat.OPUS)
-                        && (serviceId != youtubeServiceId
-                        || stream.getItagItem() == null
-                        || SUPPORTED_ITAG_IDS.contains(stream.getItagItem().id)));
+    public static <S extends Stream> List<S> removeTorrentStreams(
+            @NonNull final List<S> streamList) {
+        if (streamList.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        final Iterator<S> streamListIterator = streamList.iterator();
+        while (streamListIterator.hasNext()) {
+            final S stream = streamListIterator.next();
+            if (stream.getDeliveryMethod() == DeliveryMethod.TORRENT) {
+                streamListIterator.remove();
+            }
+        }
+
+        return streamList;
+    }
+
+    public static List<AudioStream> filterUnsupportedFormats(@NonNull final List<AudioStream> streamList,
+                                                             @NonNull final Context context) {
+        final SharedPreferences sharedPreferences = PreferenceManager
+                .getDefaultSharedPreferences(context);
+        Set<String> advancedFormats = sharedPreferences.getStringSet(context.getString(R.string.advanced_formats_key), new HashSet<>());
+        boolean useDolbyAudio = advancedFormats.contains("EC-3");
+        return streamList.stream()
+                .filter(stream -> {
+                    if (stream.getCodec() == null) {
+                        return true;
+                    }
+                    if (stream.getCodec().toLowerCase(Locale.ROOT).equals("flac")) {
+                        return false; // flac support has issue: InsufficientCapacityException, at least for BiliBili
+                    } else if (stream.getCodec().equals("ec-3")) {
+                        return useDolbyAudio;
+                    } else {
+                        return true;
+                    }
+                }).collect(Collectors.toList());
     }
 
     /**
@@ -235,167 +422,21 @@ public final class ListHelper {
             @Nullable final List<VideoStream> videoOnlyStreams,
             final boolean ascendingOrder,
             final boolean preferVideoOnlyStreams) {
-        final SharedPreferences preferences =
-                PreferenceManager.getDefaultSharedPreferences(context);
-
-        final boolean showHigherResolutions = preferences.getBoolean(
-                context.getString(R.string.show_higher_resolutions_key), false);
-        final MediaFormat defaultFormat = getDefaultFormat(context,
-                R.string.default_video_format_key, R.string.default_video_format_value);
-
-        return getSortedStreamVideosList(defaultFormat, showHigherResolutions, videoStreams,
+        final SharedPreferences sharedPreferences = PreferenceManager
+                .getDefaultSharedPreferences(context);
+        Set<String> advancedFormats = sharedPreferences.getStringSet(context.getString(R.string.advanced_formats_key), new HashSet<>());
+        return getSortedStreamVideosList(advancedFormats, videoStreams,
                 videoOnlyStreams, ascendingOrder, preferVideoOnlyStreams);
-    }
-
-    /**
-     * Get a sorted list containing a set of default resolution info
-     * and additional resolution info if showHigherResolutions is true.
-     *
-     * @param resources the resources to get the resolutions from
-     * @param defaultResolutionKey the settings key of the default resolution
-     * @param additionalResolutionKey the settings key of the additional resolutions
-     * @param showHigherResolutions if higher resolutions should be included in the sorted list
-     * @return a sorted list containing the default and maybe additional resolutions
-     */
-    public static List<String> getSortedResolutionList(
-            final Resources resources,
-            final int defaultResolutionKey,
-            final int additionalResolutionKey,
-            final boolean showHigherResolutions) {
-        final List<String> resolutions = new ArrayList<>(Arrays.asList(
-                resources.getStringArray(defaultResolutionKey)));
-        if (!showHigherResolutions) {
-            return resolutions;
-        }
-        final List<String> additionalResolutions = Arrays.asList(
-                resources.getStringArray(additionalResolutionKey));
-        // keep "best resolution" at the top
-        resolutions.addAll(1, additionalResolutions);
-        return resolutions;
-    }
-
-    public static boolean isHighResolutionSelected(final String selectedResolution,
-                                             final int additionalResolutionKey,
-                                             final Resources resources) {
-        return Arrays.asList(resources.getStringArray(
-                        additionalResolutionKey))
-                .contains(selectedResolution);
-    }
-
-    /**
-     * Filter the list of audio streams and return a list with the preferred stream for
-     * each audio track. Streams are sorted with the preferred language in the first position.
-     *
-     * @param context      the context to search for the track to give preference
-     * @param audioStreams the list of audio streams
-     * @return the sorted, filtered list
-     */
-    public static List<AudioStream> getFilteredAudioStreams(
-            @NonNull final Context context,
-            @Nullable final List<AudioStream> audioStreams) {
-        if (audioStreams == null) {
-            return Collections.emptyList();
-        }
-
-        final HashMap<String, AudioStream> collectedStreams = new HashMap<>();
-
-        final Comparator<AudioStream> cmp = getAudioFormatComparator(context);
-
-        for (final AudioStream stream : audioStreams) {
-            if (stream.getDeliveryMethod() == DeliveryMethod.TORRENT
-                    || (stream.getDeliveryMethod() == DeliveryMethod.HLS
-                    && stream.getFormat() == MediaFormat.OPUS)) {
-                continue;
-            }
-
-            final String trackId = Objects.toString(stream.getAudioTrackId(), "");
-
-            final AudioStream presentStream = collectedStreams.get(trackId);
-            if (presentStream == null || cmp.compare(stream, presentStream) > 0) {
-                collectedStreams.put(trackId, stream);
-            }
-        }
-
-        // Filter unknown audio tracks if there are multiple tracks
-        if (collectedStreams.size() > 1) {
-            collectedStreams.remove("");
-        }
-
-        // Sort collected streams by name
-        return collectedStreams.values().stream().sorted(getAudioTrackNameComparator())
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Group the list of audioStreams by their track ID and sort the resulting list by track name.
-     *
-     * @param context      app context to get track names for sorting
-     * @param audioStreams list of audio streams
-     * @return list of audio streams lists representing individual tracks
-     */
-    public static List<List<AudioStream>> getGroupedAudioStreams(
-            @NonNull final Context context,
-            @Nullable final List<AudioStream> audioStreams) {
-        if (audioStreams == null) {
-            return Collections.emptyList();
-        }
-
-        final HashMap<String, List<AudioStream>> collectedStreams = new HashMap<>();
-
-        for (final AudioStream stream : audioStreams) {
-            final String trackId = Objects.toString(stream.getAudioTrackId(), "");
-            if (collectedStreams.containsKey(trackId)) {
-                collectedStreams.get(trackId).add(stream);
-            } else {
-                final List<AudioStream> list = new ArrayList<>();
-                list.add(stream);
-                collectedStreams.put(trackId, list);
-            }
-        }
-
-        // Filter unknown audio tracks if there are multiple tracks
-        if (collectedStreams.size() > 1) {
-            collectedStreams.remove("");
-        }
-
-        // Sort tracks alphabetically, sort track streams by quality
-        final Comparator<AudioStream> nameCmp = getAudioTrackNameComparator();
-        final Comparator<AudioStream> formatCmp = getAudioFormatComparator(context);
-
-        return collectedStreams.values().stream()
-                .sorted((o1, o2) -> nameCmp.compare(o1.get(0), o2.get(0)))
-                .map(streams -> streams.stream().sorted(formatCmp).collect(Collectors.toList()))
-                .collect(Collectors.toList());
     }
 
     /*//////////////////////////////////////////////////////////////////////////
     // Utils
     //////////////////////////////////////////////////////////////////////////*/
 
-    /**
-     * Get a filtered stream list, by using Java 8 Stream's API and the given predicate.
-     *
-     * @param streamList          the stream list to filter
-     * @param streamListPredicate the predicate which will be used to filter streams
-     * @param <S>                 the item type's class that extends {@link Stream}
-     * @return a new stream list filtered using the given predicate
-     */
-    private static <S extends Stream> List<S> getFilteredStreamList(
-            @Nullable final List<S> streamList,
-            final Predicate<S> streamListPredicate) {
-        if (streamList == null) {
-            return Collections.emptyList();
-        }
-
-        return streamList.stream()
-                .filter(streamListPredicate)
-                .collect(Collectors.toList());
-    }
-
-    private static String computeDefaultResolution(@NonNull final Context context, final int key,
+    private static String computeDefaultResolution(final Context context, final int key,
                                                    final int value) {
-        final SharedPreferences preferences =
-                PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences
+                = PreferenceManager.getDefaultSharedPreferences(context);
 
         // Load the preferred resolution otherwise the best available
         String resolution = preferences != null
@@ -412,38 +453,143 @@ public final class ListHelper {
     }
 
     /**
-     * Return the index of the default stream in the list, that will be sorted in the process, based
-     * on the parameters defaultResolution and defaultFormat.
-     *
-     * @param defaultResolution the default resolution to look for
-     * @param bestResolutionKey key of the best resolution
-     * @param defaultFormat     the default format to look for
-     * @param videoStreams      a mutable list of the video streams to check (it will be sorted in
-     *                          place)
-     * @return index of the default resolution&format in the sorted videoStreams
+     * Convert any 720p60/HFR/HDR/… string into a pure numeric key so they compare equal:
+     * 1080p60 → 1080p, 1440p HDR → 1440p, etc.
      */
-    static int getDefaultResolutionIndex(final String defaultResolution,
-                                         final String bestResolutionKey,
-                                         final MediaFormat defaultFormat,
-                                         @Nullable final List<VideoStream> videoStreams) {
-        if (videoStreams == null || videoStreams.isEmpty()) {
+    private static String normalizeResolutionKey(@NonNull final String raw) {
+        return raw.replaceAll("(?i)p.*", "p");  // CASE-insensitive removal after the "p"
+    }
+
+    @Nullable
+    private static String codecFamilyOf(@Nullable final String codec) {
+        if (codec == null || codec.isEmpty()) {
+            return null;
+        }
+        final String normalized = codec.toLowerCase(Locale.ROOT);
+        if (normalized.startsWith("av01")) {
+            return "av1";
+        }
+        if (normalized.startsWith("vp09") || normalized.startsWith("vp9")) {
+            return "vp9";
+        }
+        if (normalized.startsWith("hev1") || normalized.startsWith("hvc1")) {
+            return "hevc";
+        }
+        if (normalized.startsWith("avc")) {
+            return "avc";
+        }
+        final int separator = normalized.indexOf('.');
+        return separator < 0 ? normalized : normalized.substring(0, separator);
+    }
+
+    private static int findBestVideoStreamIndex(
+            @NonNull final List<VideoStream> streams,
+            @Nullable final String exactResolution,
+            @Nullable final String normalizedResolution,
+            @Nullable final String codecFamily) {
+        int bestIndex = -1;
+        for (int i = 0; i < streams.size(); i++) {
+            final VideoStream stream = streams.get(i);
+            final String resolution = Objects.toString(stream.getResolution(), "");
+            final boolean resolutionMatches = exactResolution != null
+                    ? exactResolution.equals(resolution)
+                    : normalizedResolution != null && normalizedResolution.equals(
+                    normalizeResolutionKey(resolution));
+            if (!resolutionMatches || (codecFamily != null
+                    && !codecFamily.equals(codecFamilyOf(stream.getCodec())))) {
+                continue;
+            }
+            if (bestIndex < 0 || compareVideoStreamResolution(
+                    stream, streams.get(bestIndex)) > 0) {
+                bestIndex = i;
+            }
+        }
+        return bestIndex;
+    }
+
+
+    /**
+     * Core selection logic that groups by *effective* resolution (ignoring suffixes),
+     * then selects inside each bucket via bitrate / codec-rank.
+     */
+    static int getDefaultResolutionIndex(@NonNull final String targetRes,
+                                         @NonNull final String bestResolutionKey,
+                                         @Nullable final MediaFormat filterFormat,
+                                         @Nullable final List<VideoStream> streams) {
+
+        if (streams == null || streams.isEmpty()) {
             return -1;
         }
 
-        sortStreamList(videoStreams, false);
-        if (defaultResolution.equals(bestResolutionKey)) {
-            return 0;
+        // 1. User picked the best resolution key → simply return the highest actual stream
+        if (bestResolutionKey.equals(targetRes)) {
+            return streams.indexOf(
+                    Collections.max(streams, ListHelper::compareVideoStreamResolution));
         }
 
-        final int defaultStreamIndex =
-                getVideoStreamIndex(defaultResolution, defaultFormat, videoStreams);
+        // 2. Strip suffixes to group variants together:   1080p HDR → 1080p
+        final String normalizedTarget = normalizeResolutionKey(targetRes);
 
-        // this is actually an error,
-        // but maybe there is really no stream fitting to the default value.
-        if (defaultStreamIndex == -1) {
-            return 0;
+        // 3. Build the bucket of streams that share the same effective resolution
+        List<VideoStream> bucket = new ArrayList<>();
+        for (VideoStream s : streams) {
+            if (normalizedTarget.equals(normalizeResolutionKey(s.getResolution()))) {
+                if (filterFormat == null || s.getFormat() == filterFormat) {
+                    bucket.add(s);
+                }
+            }
         }
-        return defaultStreamIndex;
+
+        // 4. No exact format match? Drop the format filter and use everything.
+        if (bucket.isEmpty() && filterFormat != null) {
+            for (VideoStream s : streams) {
+                if (normalizedTarget.equals(normalizeResolutionKey(s.getResolution()))) {
+                    bucket.add(s);
+                }
+            }
+        }
+
+        if (bucket.isEmpty()) {
+            String fallbackResolution = null;
+            for (final VideoStream stream : streams) {
+                final String resolution = normalizeResolutionKey(stream.getResolution());
+                if (compareVideoStreamResolution(resolution, normalizedTarget) < 0
+                        && (fallbackResolution == null || compareVideoStreamResolution(
+                        resolution, fallbackResolution) > 0)) {
+                    fallbackResolution = resolution;
+                }
+            }
+
+            if (fallbackResolution == null) {
+                for (final VideoStream stream : streams) {
+                    final String resolution = normalizeResolutionKey(stream.getResolution());
+                    if (fallbackResolution == null || compareVideoStreamResolution(
+                            resolution, fallbackResolution) < 0) {
+                        fallbackResolution = resolution;
+                    }
+                }
+            }
+
+            for (final VideoStream stream : streams) {
+                if (fallbackResolution.equals(normalizeResolutionKey(stream.getResolution()))
+                        && (filterFormat == null || stream.getFormat() == filterFormat)) {
+                    bucket.add(stream);
+                }
+            }
+
+            if (bucket.isEmpty() && filterFormat != null) {
+                for (final VideoStream stream : streams) {
+                    if (fallbackResolution.equals(
+                            normalizeResolutionKey(stream.getResolution()))) {
+                        bucket.add(stream);
+                    }
+                }
+            }
+        }
+
+        bucket.sort(ListHelper::compareVideoStreamResolution);
+        final VideoStream best = bucket.get(bucket.size() - 1);
+        return streams.indexOf(best);
     }
 
     /**
@@ -461,13 +607,15 @@ public final class ListHelper {
      */
     @NonNull
     static List<VideoStream> getSortedStreamVideosList(
-            @Nullable final MediaFormat defaultFormat,
-            final boolean showHigherResolutions,
+            final Set<String> advancedFormats,
             @Nullable final List<VideoStream> videoStreams,
             @Nullable final List<VideoStream> videoOnlyStreams,
             final boolean ascendingOrder,
             final boolean preferVideoOnlyStreams
     ) {
+        boolean useWebM = advancedFormats.contains("VP9");
+        boolean useAV1 = advancedFormats.contains("AV01");
+        boolean useH265 = advancedFormats.contains("HEVC");
         // Determine order of streams
         // The last added list is preferred
         final List<List<VideoStream>> videoStreamsOrdered =
@@ -480,26 +628,33 @@ public final class ListHelper {
                 .filter(Objects::nonNull)
                 .flatMap(List::stream)
                 // Filter out higher resolutions (or not if high resolutions should always be shown)
-                .filter(stream -> showHigherResolutions
-                        || !HIGH_RESOLUTION_LIST.contains(stream.getResolution()
-                        // Replace any frame rate with nothing
-                        .replaceAll("p\\d+$", "p")))
+                .filter(stream -> {
+                    try {
+                        if (stream.getFormat() == MediaFormat.WEBM) {
+                            return useWebM;
+                        } else if (stream.getCodec().startsWith("av01")) {
+                            return useAV1;
+                        } else if (stream.getCodec().startsWith("hev1") || stream.getCodec().startsWith("hvc1")) {
+                            return useH265;
+                        } else {
+                            return true;
+                        }
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                    return true;
+                })
                 .collect(Collectors.toList());
 
-        final HashMap<String, VideoStream> hashMap = new HashMap<>();
-        // Add all to the hashmap
-        for (final VideoStream videoStream : allInitialStreams) {
-            hashMap.put(videoStream.getResolution(), videoStream);
-        }
-
-        // Override the values when the key == resolution, with the defaultFormat
-        for (final VideoStream videoStream : allInitialStreams) {
-            if (videoStream.getFormat() == defaultFormat) {
-                hashMap.put(videoStream.getResolution(), videoStream);
-            }
-        }
-
         // Return the sorted list
+        final HashMap<String, VideoStream> hashMap = new HashMap<>();
+        for (final VideoStream videoStream : allInitialStreams) {
+            final String trackSuffix = videoStream.getAudioTrackId() != null
+                    ? "|" + videoStream.getAudioTrackId() : "";
+            hashMap.put(videoStream.getCodec().split("\\.")[0]
+                    + videoStream.getResolution() + trackSuffix, videoStream);
+        }
+
         return sortStreamList(new ArrayList<>(hashMap.values()), ascendingOrder);
     }
 
@@ -525,30 +680,74 @@ public final class ListHelper {
      */
     private static List<VideoStream> sortStreamList(final List<VideoStream> videoStreams,
                                                     final boolean ascendingOrder) {
-        // Compares the quality of two video streams.
-        final Comparator<VideoStream> comparator = Comparator.nullsLast(Comparator
-                .comparing(VideoStream::getResolution, ListHelper::compareVideoStreamResolution)
-                .thenComparingInt(s -> VIDEO_FORMAT_QUALITY_RANKING.indexOf(s.getFormat())));
+        final Comparator<VideoStream> comparator = ListHelper::compareVideoStreamResolution;
         Collections.sort(videoStreams, ascendingOrder ? comparator : comparator.reversed());
         return videoStreams;
+    }
+
+    /**
+     * Get the audio from the list with the highest quality.
+     * Format will be ignored if it yields no results.
+     *
+     * @param format       The target format type or null if it doesn't matter
+     * @param audioStreams List of audio streams
+     * @return Index of audio stream that produces the most compact results or -1 if not found
+     */
+    static int getHighestQualityAudioIndex(@Nullable final MediaFormat format,
+                                           @Nullable final List<AudioStream> audioStreams) {
+        return getAudioIndexByHighestRank(format, audioStreams,
+                // Compares descending (last = highest rank)
+                (s1, s2) -> compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_QUALITY_RANKING)
+        );
+    }
+
+    /**
+     * Get the audio from the list with the lowest bitrate and most efficient format.
+     * Format will be ignored if it yields no results.
+     *
+     * @param format       The target format type or null if it doesn't matter
+     * @param audioStreams List of audio streams
+     * @return Index of audio stream that produces the most compact results or -1 if not found
+     */
+    static int getMostCompactAudioIndex(@Nullable final MediaFormat format,
+                                        @Nullable final List<AudioStream> audioStreams) {
+
+        return getAudioIndexByHighestRank(format, audioStreams,
+                // The "-" is important -> Compares ascending (first = highest rank)
+                (s1, s2) -> -compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_EFFICIENCY_RANKING)
+        );
     }
 
     /**
      * Get the audio-stream from the list with the highest rank, depending on the comparator.
      * Format will be ignored if it yields no results.
      *
-     * @param audioStreams List of audio streams
-     * @param comparator   The comparator used for determining the max/best/highest ranked value
+     * @param targetedFormat The target format type or null if it doesn't matter
+     * @param audioStreams   List of audio streams
+     * @param comparator     The comparator used for determining the max/best/highest ranked value
      * @return Index of audio stream that produces the highest ranked result or -1 if not found
      */
-    static int getAudioIndexByHighestRank(@Nullable final List<AudioStream> audioStreams,
-                                          final Comparator<AudioStream> comparator) {
+    private static int getAudioIndexByHighestRank(@Nullable final MediaFormat targetedFormat,
+                                                  @Nullable final List<AudioStream> audioStreams,
+                                                  final Comparator<AudioStream> comparator) {
         if (audioStreams == null || audioStreams.isEmpty()) {
             return -1;
         }
 
         final AudioStream highestRankedAudioStream = audioStreams.stream()
-                .max(comparator).orElse(null);
+                .filter(audioStream -> targetedFormat == null
+                        || audioStream.getFormat() == targetedFormat)
+                .max(comparator)
+                .orElse(null);
+
+        if (highestRankedAudioStream == null) {
+            // Fallback: Ignore targetedFormat if not null
+            if (targetedFormat != null) {
+                return getAudioIndexByHighestRank(null, audioStreams, comparator);
+            }
+            // targetedFormat is already null -> return -1
+            return -1;
+        }
 
         return audioStreams.indexOf(highestRankedAudioStream);
     }
@@ -583,26 +782,25 @@ public final class ListHelper {
         final String targetResolutionNoRefresh = targetResolution.replaceAll("p\\d+$", "p");
 
         for (int idx = 0; idx < videoStreams.size(); idx++) {
-            final MediaFormat format = targetFormat == null
-                    ? null
-                    : videoStreams.get(idx).getFormat();
+            final MediaFormat format
+                    = targetFormat == null ? null : videoStreams.get(idx).getFormat();
             final String resolution = videoStreams.get(idx).getResolution();
             final String resolutionNoRefresh = resolution.replaceAll("p\\d+$", "p");
 
-            if (format == targetFormat && resolution.equals(targetResolution)) {
+            if (format == targetFormat && calculateResolution(resolution) == calculateResolution(targetResolution)) {
                 fullMatchIndex = idx;
             }
 
-            if (format == targetFormat && resolutionNoRefresh.equals(targetResolutionNoRefresh)) {
+            if (format == targetFormat && calculateResolution(resolutionNoRefresh) == calculateResolution(targetResolutionNoRefresh)) {
                 fullMatchNoRefreshIndex = idx;
             }
 
-            if (resMatchOnlyIndex == -1 && resolution.equals(targetResolution)) {
+            if (resMatchOnlyIndex == -1 && calculateResolution(resolution) == calculateResolution(targetResolution)) {
                 resMatchOnlyIndex = idx;
             }
 
             if (resMatchOnlyNoRefreshIndex == -1
-                    && resolutionNoRefresh.equals(targetResolutionNoRefresh)) {
+                    && calculateResolution(resolutionNoRefresh) == calculateResolution(targetResolutionNoRefresh)) {
                 resMatchOnlyNoRefreshIndex = idx;
             }
 
@@ -624,7 +822,10 @@ public final class ListHelper {
         if (resMatchOnlyNoRefreshIndex != -1) {
             return resMatchOnlyNoRefreshIndex;
         }
-        return lowerResMatchNoRefreshIndex;
+        if (lowerResMatchNoRefreshIndex != -1) {
+            return lowerResMatchNoRefreshIndex;
+        }
+        return videoStreams.size() - 1;
     }
 
     /**
@@ -639,29 +840,31 @@ public final class ListHelper {
     private static int getDefaultResolutionWithDefaultFormat(@NonNull final Context context,
                                                              final String defaultResolution,
                                                              final List<VideoStream> videoStreams) {
-        final MediaFormat defaultFormat = getDefaultFormat(context,
-                R.string.default_video_format_key, R.string.default_video_format_value);
+//        final MediaFormat defaultFormat = MediaFormat.MPEG_4;
         return getDefaultResolutionIndex(defaultResolution,
-                context.getString(R.string.best_resolution_key), defaultFormat, videoStreams);
+                context.getString(R.string.best_resolution_key), null, videoStreams);
     }
 
-    @Nullable
     private static MediaFormat getDefaultFormat(@NonNull final Context context,
                                                 @StringRes final int defaultFormatKey,
                                                 @StringRes final int defaultFormatValueKey) {
-        final SharedPreferences preferences =
-                PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences
+                = PreferenceManager.getDefaultSharedPreferences(context);
 
         final String defaultFormat = context.getString(defaultFormatValueKey);
         final String defaultFormatString = preferences.getString(
-                context.getString(defaultFormatKey),
-                defaultFormat
-        );
+                context.getString(defaultFormatKey), defaultFormat);
 
-        return getMediaFormatFromKey(context, defaultFormatString);
+        MediaFormat defaultMediaFormat = getMediaFormatFromKey(context, defaultFormatString);
+        if (defaultMediaFormat == null) {
+            preferences.edit().putString(context.getString(defaultFormatKey), defaultFormat)
+                    .apply();
+            defaultMediaFormat = getMediaFormatFromKey(context, defaultFormat);
+        }
+
+        return defaultMediaFormat;
     }
 
-    @Nullable
     private static MediaFormat getMediaFormatFromKey(@NonNull final Context context,
                                                      @NonNull final String formatKey) {
         MediaFormat format = null;
@@ -679,14 +882,56 @@ public final class ListHelper {
         return format;
     }
 
+    // Compares the quality of two audio streams
+    private static int compareAudioStreamBitrate(final AudioStream streamA,
+                                                 final AudioStream streamB,
+                                                 final List<MediaFormat> formatRanking) {
+        if (streamA == null) {
+            return -1;
+        }
+        if (streamB == null) {
+            return 1;
+        }
+        if (streamA.getAverageBitrate() < streamB.getAverageBitrate()) {
+            return -1;
+        }
+        if (streamA.getAverageBitrate() > streamB.getAverageBitrate()) {
+            return 1;
+        }
+
+        // Same bitrate and format
+        return formatRanking.indexOf(streamA.getFormat())
+                - formatRanking.indexOf(streamB.getFormat());
+    }
+
+    public static int calculateResolution(String x){
+        int res = 0;
+        if(x.contains("8K")) {
+            res = 4320;
+        } else if(x.contains("4K")) {
+            res = 2160;
+        } else if(x.contains("高帧率")) {
+            res = 1083;
+        } else if(x.contains("高码率")) {
+            res = 1082;
+        } else if (x.contains("HDR")) {
+            res = 2162;
+        } else if (x.contains("杜比")){
+            res = 2163;
+        } else if (x.contains("低画質")) {
+            res = 240;
+        } else{
+            res = Integer.parseInt(x.replaceAll("0p\\d+$", "1")
+                    .replaceAll("[^\\d.]", ""));
+        }
+        return res;
+    }
+
     private static int compareVideoStreamResolution(@NonNull final String r1,
                                                     @NonNull final String r2) {
+
         try {
-            final int res1 = Integer.parseInt(r1.replaceAll("0p\\d+$", "1")
-                    .replaceAll("[^\\d.]", ""));
-            final int res2 = Integer.parseInt(r2.replaceAll("0p\\d+$", "1")
-                    .replaceAll("[^\\d.]", ""));
-            return res1 - res2;
+            return calculateResolution(r1) - calculateResolution(r2);
         } catch (final NumberFormatException e) {
             // Consider the first one greater because we don't know if the two streams are
             // different or not (a NumberFormatException was thrown so we don't know the resolution
@@ -695,7 +940,57 @@ public final class ListHelper {
         }
     }
 
-    static boolean isLimitingDataUsage(@NonNull final Context context) {
+    private static int getCodecPriority(final VideoStream stream) {
+        final String codecFamily = codecFamilyOf(stream.getCodec());
+        if (codecFamily == null) {
+            return 0;
+        }
+        switch (codecFamily) {
+            case "av1":
+                return 4;
+            case "vp9":
+                return 3;
+            case "hevc":
+                return 2;
+            case "avc":
+                return 1;
+            default:
+                return 0;
+        }
+    }
+
+    // Compares the quality of two video streams.
+    private static int compareVideoStreamResolution(final VideoStream streamA,
+                                                    final VideoStream streamB) {
+        if (streamA == null) {
+            return -1;
+        }
+        if (streamB == null) {
+            return 1;
+        }
+
+        final int resComp = compareVideoStreamResolution(streamA.getResolution(),
+                streamB.getResolution());
+        if (resComp != 0) {
+            return resComp;
+        }
+
+        final int codecComp = getCodecPriority(streamA) - getCodecPriority(streamB);
+        if (codecComp != 0) {
+            return codecComp;
+        }
+
+        if (streamA.getBitrate() - streamB.getBitrate() != 0) {
+            return - streamA.getBitrate() + streamB.getBitrate();
+        }
+
+        // Same bitrate and format
+        return ListHelper.VIDEO_FORMAT_QUALITY_RANKING.indexOf(streamA.getFormat())
+                - ListHelper.VIDEO_FORMAT_QUALITY_RANKING.indexOf(streamB.getFormat());
+    }
+
+
+    private static boolean isLimitingDataUsage(final Context context) {
         return getResolutionLimit(context) != null;
     }
 
@@ -708,8 +1003,8 @@ public final class ListHelper {
     private static String getResolutionLimit(@NonNull final Context context) {
         String resolutionLimit = null;
         if (isMeteredNetwork(context)) {
-            final SharedPreferences preferences =
-                    PreferenceManager.getDefaultSharedPreferences(context);
+            final SharedPreferences preferences
+                    = PreferenceManager.getDefaultSharedPreferences(context);
             final String defValue = context.getString(R.string.limit_data_usage_none_key);
             final String value = preferences.getString(
                     context.getString(R.string.limit_mobile_data_usage_key), defValue);
@@ -725,8 +1020,8 @@ public final class ListHelper {
      * @return {@code true} if connected to a metered network
      */
     public static boolean isMeteredNetwork(@NonNull final Context context) {
-        final ConnectivityManager manager =
-                ContextCompat.getSystemService(context, ConnectivityManager.class);
+        final ConnectivityManager manager
+                = ContextCompat.getSystemService(context, ConnectivityManager.class);
         if (manager == null || manager.getActiveNetworkInfo() == null) {
             return false;
         }
@@ -734,147 +1029,80 @@ public final class ListHelper {
         return manager.isActiveNetworkMetered();
     }
 
-    /**
-     * Get a {@link Comparator} to compare {@link AudioStream}s by their format and bitrate.
-     *
-     * <p>The preferred stream will be ordered last.</p>
-     *
-     * @param context app context
-     * @return Comparator
-     */
-    private static Comparator<AudioStream> getAudioFormatComparator(
-            final @NonNull Context context) {
-        final MediaFormat defaultFormat = getDefaultFormat(context,
-                R.string.default_audio_format_key, R.string.default_audio_format_value);
-        return getAudioFormatComparator(defaultFormat, isLimitingDataUsage(context));
-    }
-
-    /**
-     * Get a {@link Comparator} to compare {@link AudioStream}s by their format and bitrate.
-     *
-     * <p>The preferred stream will be ordered last.</p>
-     *
-     * @param defaultFormat  the default format to look for
-     * @param limitDataUsage choose low bitrate audio stream
-     * @return Comparator
-     */
-    static Comparator<AudioStream> getAudioFormatComparator(
-            @Nullable final MediaFormat defaultFormat, final boolean limitDataUsage) {
-        final List<MediaFormat> formatRanking = limitDataUsage
-                ? AUDIO_FORMAT_EFFICIENCY_RANKING : AUDIO_FORMAT_QUALITY_RANKING;
-
-        Comparator<AudioStream> bitrateComparator =
-                Comparator.comparingInt(AudioStream::getAverageBitrate);
-        if (limitDataUsage) {
-            bitrateComparator = bitrateComparator.reversed();
+    public static List<VideoStream> filterVideoStreamsByPreferredLanguage(
+            final Context context,
+            final List<VideoStream> videoStreams,
+            final List<AudioStream> audioStreams) {
+        final boolean hasAudioTracks = videoStreams.stream()
+                .anyMatch(s -> s.getAudioTrackId() != null);
+        if (!hasAudioTracks) {
+            return videoStreams;
         }
-
-        return Comparator.comparing(AudioStream::getFormat, (o1, o2) -> {
-            if (defaultFormat != null) {
-                return Boolean.compare(o1 == defaultFormat, o2 == defaultFormat);
+        final List<AudioStream> filtered = getFilteredAudioStreams(context, audioStreams);
+        final int defaultIdx = getDefaultAudioFormat(context, filtered);
+        String defaultTrackId = null;
+        if (defaultIdx >= 0 && defaultIdx < filtered.size()) {
+            defaultTrackId = filtered.get(defaultIdx).getAudioTrackId();
+        }
+        if (defaultTrackId == null) {
+            return collapseAudioTrackVariants(videoStreams);
+        }
+        final String trackId = defaultTrackId;
+        final List<VideoStream> result = new ArrayList<>();
+        for (final VideoStream s : videoStreams) {
+            if (trackId.equals(s.getAudioTrackId()) || s.getAudioTrackId() == null) {
+                result.add(s);
             }
-            return 0;
-        }).thenComparing(bitrateComparator).thenComparingInt(
-                stream -> formatRanking.indexOf(stream.getFormat()));
+        }
+        return result.isEmpty()
+                ? collapseAudioTrackVariants(videoStreams)
+                : collapseAudioTrackVariants(result);
     }
 
-    /**
-     * Get a {@link Comparator} to compare {@link AudioStream}s by their tracks.
-     *
-     * <p>Tracks will be compared this order:</p>
-     * <ol>
-     * <li>If {@code preferOriginalAudio}: use original audio</li>
-     * <li>Language matches {@code preferredLanguage}</li>
-     * <li>
-     *     Track type ranks highest in this order:
-     *     <i>Original</i> > <i>Dubbed</i> > <i>Descriptive</i>
-     *     <p>If {@code preferDescriptiveAudio}:
-     *     <i>Descriptive</i> > <i>Dubbed</i> > <i>Original</i></p>
-     * </li>
-     * <li>Language is English</li>
-     * </ol>
-     *
-     * <p>The preferred track will be ordered last.</p>
-     *
-     * @param context App context
-     * @return Comparator
-     */
-    private static Comparator<AudioStream> getAudioTrackComparator(
-            @NonNull final Context context) {
-        final SharedPreferences preferences =
-                PreferenceManager.getDefaultSharedPreferences(context);
-        final Locale preferredLanguage = Localization.getPreferredLocale(context);
-        final boolean preferOriginalAudio =
-                preferences.getBoolean(context.getString(R.string.prefer_original_audio_key),
-                        true);
-        final boolean preferDescriptiveAudio =
-                preferences.getBoolean(context.getString(R.string.prefer_descriptive_audio_key),
-                        false);
-
-        return getAudioTrackComparator(preferredLanguage, preferOriginalAudio,
-                preferDescriptiveAudio);
+    private static List<VideoStream> collapseAudioTrackVariants(final List<VideoStream> videoStreams) {
+        final Map<String, VideoStream> result = new LinkedHashMap<>();
+        for (final VideoStream stream : videoStreams) {
+            final String key = stream.getFormat() + "|"
+                    + getCodecFamily(stream) + "|" + stream.getResolution() + "|"
+                    + stream.isVideoOnly();
+            final VideoStream existing = result.get(key);
+            if (existing == null || shouldPreferCollapsedVariant(existing, stream)) {
+                result.put(key, stream);
+            }
+        }
+        return new ArrayList<>(result.values());
     }
 
-    /**
-     * Get a {@link Comparator} to compare {@link AudioStream}s by their tracks.
-     *
-     * <p>Tracks will be compared this order:</p>
-     * <ol>
-     * <li>If {@code preferOriginalAudio}: use original audio</li>
-     * <li>Language matches {@code preferredLanguage}</li>
-     * <li>
-     *     Track type ranks highest in this order:
-     *     <i>Original</i> > <i>Dubbed</i> > <i>Descriptive</i>
-     *     <p>If {@code preferDescriptiveAudio}:
-     *     <i>Descriptive</i> > <i>Dubbed</i> > <i>Original</i></p>
-     * </li>
-     * <li>Language is English</li>
-     * </ol>
-     *
-     * <p>The preferred track will be ordered last.</p>
-     *
-     * @param preferredLanguage      Preferred audio stream language
-     * @param preferOriginalAudio    Get the original audio track regardless of its language
-     * @param preferDescriptiveAudio Prefer the descriptive audio track if available
-     * @return Comparator
-     */
-    static Comparator<AudioStream> getAudioTrackComparator(
-            final Locale preferredLanguage,
-            final boolean preferOriginalAudio,
-            final boolean preferDescriptiveAudio) {
-        final String langCode = preferredLanguage.getISO3Language();
-        final List<AudioTrackType> trackTypeRanking = preferDescriptiveAudio
-                ? AUDIO_TRACK_TYPE_RANKING_DESCRIPTIVE : AUDIO_TRACK_TYPE_RANKING;
-
-        return Comparator.comparing(AudioStream::getAudioTrackType, (o1, o2) -> {
-                    if (preferOriginalAudio) {
-                        return Boolean.compare(
-                                o1 == AudioTrackType.ORIGINAL, o2 == AudioTrackType.ORIGINAL);
-                    }
-                    return 0;
-                }).thenComparing(AudioStream::getAudioLocale,
-                        Comparator.nullsFirst(Comparator.comparing(
-                                locale -> locale.getISO3Language().equals(langCode))))
-                .thenComparing(AudioStream::getAudioTrackType,
-                        Comparator.nullsFirst(Comparator.comparingInt(trackTypeRanking::indexOf)))
-                .thenComparing(AudioStream::getAudioLocale,
-                        Comparator.nullsFirst(Comparator.comparing(
-                                locale -> locale.getISO3Language().equals(
-                                        Locale.ENGLISH.getISO3Language()))));
+    private static boolean shouldPreferCollapsedVariant(final VideoStream existing,
+                                                        final VideoStream candidate) {
+        if (existing.getDeliveryMethod() == DeliveryMethod.HLS
+                && candidate.getDeliveryMethod() != DeliveryMethod.HLS) {
+            return true;
+        }
+        return isOriginalAudioTrack(candidate) && !isOriginalAudioTrack(existing);
     }
 
-    /**
-     * Get a {@link Comparator} to compare {@link AudioStream}s by their languages and track types
-     * for alphabetical sorting.
-     *
-     * @return Comparator
-     */
-    private static Comparator<AudioStream> getAudioTrackNameComparator() {
-        final Locale appLoc = Localization.getAppLocale();
+    private static String getCodecFamily(final VideoStream stream) {
+        final String codec = stream.getCodec();
+        if (codec == null || codec.isEmpty()) {
+            return "";
+        }
+        return codec.split("\\.")[0];
+    }
 
-        return Comparator.comparing(AudioStream::getAudioLocale, Comparator.nullsLast(
-                        Comparator.comparing(locale -> locale.getDisplayName(appLoc))))
-                .thenComparing(AudioStream::getAudioTrackType, Comparator.nullsLast(
-                        Comparator.naturalOrder()));
+    private static boolean isOriginalAudioTrack(final VideoStream stream) {
+        final String trackName = stream.getAudioTrackName();
+        return trackName != null && trackName.toLowerCase(Locale.ROOT).contains("original");
+    }
+
+    public static List<AudioStream> filterDownloadableAudioStreams(
+            final List<AudioStream> audioStreams) {
+        final List<AudioStream> result = new ArrayList<>();
+        for (final AudioStream a : audioStreams) {
+            if (a.getDeliveryMethod() != DeliveryMethod.HLS || a.isUrl()) {
+                result.add(a);
+            }
+        }
+        return result;
     }
 }
