@@ -6,16 +6,12 @@ import android.graphics.Color;
 import android.os.Handler;
 import android.view.View;
 
-import androidx.core.os.HandlerCompat;
-
 import com.google.android.material.snackbar.Snackbar;
 
 import org.schabi.newpipe.R;
 
 import java.util.ArrayList;
-import java.util.Optional;
 
-import kotlin.Pair;
 import us.shandian.giga.get.FinishedMission;
 import us.shandian.giga.get.Mission;
 import us.shandian.giga.service.DownloadManager;
@@ -23,17 +19,12 @@ import us.shandian.giga.service.DownloadManager.MissionIterator;
 import us.shandian.giga.ui.adapter.MissionAdapter;
 
 public class Deleter {
-    private static final String COMMIT = "commit";
-    private static final String NEXT = "next";
-    private static final String SHOW = "show";
-
     private static final int TIMEOUT = 5000;// ms
     private static final int DELAY = 350;// ms
     private static final int DELAY_RESUME = 400;// ms
 
     private Snackbar snackbar;
-    // list of missions to be deleted, and whether to also delete the corresponding file
-    private ArrayList<Pair<Mission, Boolean>> items;
+    private ArrayList<Mission> items;
     private boolean running = true;
 
     private final Context mContext;
@@ -43,6 +34,10 @@ public class Deleter {
     private final Handler mHandler;
     private final View mView;
 
+    private final Runnable rShow;
+    private final Runnable rNext;
+    private final Runnable rCommit;
+
     public Deleter(View v, Context c, MissionAdapter a, DownloadManager d, MissionIterator i, Handler h) {
         mView = v;
         mContext = c;
@@ -51,25 +46,31 @@ public class Deleter {
         mIterator = i;
         mHandler = h;
 
+        // use variables to know the reference of the lambdas
+        rShow = this::show;
+        rNext = this::next;
+        rCommit = this::commit;
+
         items = new ArrayList<>(2);
     }
 
-    public void append(Mission item, boolean alsoDeleteFile) {
+    public void append(Mission item) {
+
         /* If a mission is removed from the list while the Snackbar for a previously
          * removed item is still showing, commit the action for the previous item
          * immediately. This prevents Snackbars from stacking up in reverse order.
          */
-        mHandler.removeCallbacksAndMessages(COMMIT);
+        mHandler.removeCallbacks(rCommit);
         commit();
 
         mIterator.hide(item);
-        items.add(0, new Pair<>(item, alsoDeleteFile));
+        items.add(0, item);
 
         show();
     }
 
     private void forget() {
-        mIterator.unHide(items.remove(0).getFirst());
+        mIterator.unHide(items.remove(0));
         mAdapter.applyChanges();
 
         show();
@@ -81,45 +82,31 @@ public class Deleter {
         pause();
         running = true;
 
-        HandlerCompat.postDelayed(mHandler, this::next, NEXT, DELAY);
+        mHandler.postDelayed(rNext, DELAY);
     }
 
     private void next() {
         if (items.size() < 1) return;
 
-        final Optional<String> fileToBeDeleted = items.stream()
-                .filter(Pair::getSecond)
-                .map(p -> p.getFirst().storage.getName())
-                .findFirst();
-
-        String msg;
-        if (fileToBeDeleted.isPresent()) {
-            msg = mContext.getString(R.string.file_deleted)
-                    .concat(":\n")
-                    .concat(fileToBeDeleted.get());
-        } else {
-            msg = mContext.getString(R.string.entry_deleted);
-        }
+        String msg = mContext.getString(R.string.file_deleted).concat(":\n").concat(items.get(0).storage.getName());
 
         snackbar = Snackbar.make(mView, msg, Snackbar.LENGTH_INDEFINITE);
         snackbar.setAction(R.string.undo, s -> forget());
         snackbar.setActionTextColor(Color.YELLOW);
         snackbar.show();
 
-        HandlerCompat.postDelayed(mHandler, this::commit, COMMIT, TIMEOUT);
+        mHandler.postDelayed(rCommit, TIMEOUT);
     }
 
     private void commit() {
         if (items.size() < 1) return;
 
         while (items.size() > 0) {
-            Pair<Mission, Boolean> missionAndAlsoDeleteFile = items.remove(0);
-            Mission mission = missionAndAlsoDeleteFile.getFirst();
-            boolean alsoDeleteFile = missionAndAlsoDeleteFile.getSecond();
+            Mission mission = items.remove(0);
             if (mission.deleted) continue;
 
             mIterator.unHide(mission);
-            mDownloadManager.deleteMission(mission, alsoDeleteFile);
+            mDownloadManager.deleteMission(mission);
 
             if (mission instanceof FinishedMission) {
                 mContext.sendBroadcast(new Intent(Intent.ACTION_MEDIA_SCANNER_SCAN_FILE, mission.storage.getUri()));
@@ -137,16 +124,15 @@ public class Deleter {
 
     public void pause() {
         running = false;
-        mHandler.removeCallbacksAndMessages(NEXT);
-        mHandler.removeCallbacksAndMessages(SHOW);
-        mHandler.removeCallbacksAndMessages(COMMIT);
+        mHandler.removeCallbacks(rNext);
+        mHandler.removeCallbacks(rShow);
+        mHandler.removeCallbacks(rCommit);
         if (snackbar != null) snackbar.dismiss();
     }
 
     public void resume() {
-        if (!running) {
-            HandlerCompat.postDelayed(mHandler, this::show, SHOW, DELAY_RESUME);
-        }
+        if (running) return;
+        mHandler.postDelayed(rShow, DELAY_RESUME);
     }
 
     public void dispose() {
@@ -154,11 +140,7 @@ public class Deleter {
 
         pause();
 
-        for (Pair<Mission, Boolean> missionAndAlsoDeleteFile : items) {
-            Mission mission = missionAndAlsoDeleteFile.getFirst();
-            boolean alsoDeleteFile = missionAndAlsoDeleteFile.getSecond();
-            mDownloadManager.deleteMission(mission, alsoDeleteFile);
-        }
+        for (Mission mission : items) mDownloadManager.deleteMission(mission);
         items = null;
     }
 }
